# dex-indexer

./: .gitignore  README.md  docker-compose.yaml  dockerfile  dump.rdb  package-lock.json  package.json  pnpm-lock.yaml  render.yaml  tailwind.config.ts
.github/workflows/: ping-server.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yaml  start.sh
backend/api_server/: Cargo.toml
backend/grpc_server/: Cargo.toml
backend/metrics_service/: Cargo.toml
backend/metrics_worker/: Cargo.toml
backend/ohlcv_worker/: Cargo.toml
backend/shared/: Cargo.toml
backend/shared/src/: lib.rs
backend/shared/src/elasticsearch/: client.rs
backend/shared/src/entities/: mod.rs  ohlcv_candles.rs
backend/shared/src/queues/: mod.rs  stream_manager.rs  structured_txn_manager.rs  swap_txn_manager.rs
backend/shared/src/redis/: metric_and_ohlcv_manager.rs  mod.rs  price_service.rs  pubsub_manager.rs  queue_manager.rs  token_symbol_manager.rs  worker.rs
backend/shared/src/services/: metrics_service.rs  mod.rs  price_service.rs
backend/shared/src/types/: elasticsearch.rs  grpc.rs  mod.rs  ohlcv.rs  price.rs  worker.rs
backend/shared/src/websocket/: ws_manager.rs
backend/shared/src/workers/: metrics_worker.rs  mod.rs  ohlcv_worker.rs  txn_worker.rs
backend/shared/src/ys_grpc/: client.rs
backend/txn_worker/: Cargo.toml
backend/worker_process/: Cargo.toml
src/components/: Pagination.tsx  RoomSelector.tsx  TransactionCard.tsx
src/context/: WebsocketContext.tsx
src/data/: DataTypes.tsx  mockData.tsx
src/hooks/: useWebsocket.tsx
src/lib/: utils.ts
(+24 files in other folders)
