[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = {version = "0.32.5", features = ["tokio-comp", "json"]}
yellowstone-grpc-client = "8.0.0"
yellowstone-grpc-proto = "8.0.0"
futures = "0.3.31"
anyhow = "1.0.99"
serde_json = "1.0.143"
serde = "1.0.219"
sea-orm = { version = "1.1.16", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
sea-orm-cli = "1.1.16"
tokio = "1.47.1"
axum = {version = "0.8.4", features = ["ws"]}
reqwest = {version = "0.12.23", features = ["json"]}
chrono = "0.4.42"
